[tool.poetry]
name = "streamlit-db-admin-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "1.25.0"
pandas = "2.0.3"
SQLAlchemy = "2.0.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
